# tftp-SeniorDesign

./: .clang-format  .clang-tidy  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  CMakePresetsClang.json  CMakePresetsGcc.json  CMakePresetsMsvc.json  InstallPackage.cmake  README.md  vcpkg.json
app/: CMakeLists.txt
app/tftp_client/: CMakeLists.txt  tftp_client.adoc  tftp_client.cpp  tftp_client.md
app/tftp_server/: CMakeLists.txt  tftp_server.adoc  tftp_server.cpp  tftp_server.md
app/tftp_unit_test/: CMakeLists.txt  tftp_unit_test.cpp  tftp_unit_test.md
application/: CMakeLists.txt  tftp_applications.md
application/tftp_client/: CMakeLists.txt  TftpClientApplication.cpp  TftpClientApplication.hpp  tftp_client.cpp  tftp_client.md
application/tftp_server/: CMakeLists.txt  TftpServerApplication.cpp  TftpServerApplication.hpp  tftp_server.cpp  tftp_server.md
application/tftp_test/: CMakeLists.txt  tftp_test.cpp
application/tftp_unit_test/: CMakeLists.txt  tftp_unit_test.cpp  tftp_unit_test.md
doc/: CMakeLists.txt  Mainpage.md  doxygen_index.html.in
doc/tftp_api_doc/: CMakeLists.txt
doc/tftp_dependencies/: CMakeLists.txt
doc/tftp_internal_doc/: CMakeLists.txt
doc/tftp_manpage/: CMakeLists.txt
doc/tftp_user_manual/: CMakeLists.txt  glossary.adoc  references.adoc  tftp_blocksize_option.adoc  tftp_client.adoc  tftp_operations.adoc  tftp_options.adoc  tftp_server.adoc  tftp_timeout_option.adoc  tftp_transfer_size_option.adoc  tftp_transfersize_option.adoc  tftp_user_manual.adoc
lib/tftp/: CMakeLists.txt  DataHandler.hpp  Logger.hpp  ReceiveDataHandler.hpp  RequestTypeDescription.cpp  RequestTypeDescription.hpp  Tftp.cpp  Tftp.hpp  TftpConfiguration.cpp  TftpConfiguration.hpp  TftpException.hpp  TftpLogger.hpp  TftpOptionsConfiguration.cpp  TftpOptionsConfiguration.hpp  TransferStatusDescription.cpp  TransferStatusDescription.hpp  TransmitDataHandler.hpp  Version.cpp.in  Version.hpp  Version.hpp.in
lib/tftp/client/: CMakeLists.txt  Client.hpp  Operation.hpp  ReadOperation.hpp  ReadOperationConfiguration.cpp  ReadOperationConfiguration.hpp  TftpClient.cpp  TftpClient.hpp  WriteOperation.hpp  WriteOperationConfiguration.cpp  WriteOperationConfiguration.hpp
lib/tftp/clients/: CMakeLists.txt  Client.cpp  Client.hpp  Clients.hpp  Operation.hpp  ReadOperation.hpp  WriteOperation.hpp
lib/tftp/file/: CMakeLists.txt  File.hpp  MemoryFile.cpp  MemoryFile.hpp  NullSinkFile.cpp  NullSinkFile.hpp  StreamFile.cpp  StreamFile.hpp  TftpFile.hpp
lib/tftp/files/: CMakeLists.txt  File.hpp  Files.hpp  MemoryFile.cpp  MemoryFile.hpp  NullSinkFile.cpp  NullSinkFile.hpp  StreamFile.cpp  StreamFile.hpp
lib/tftp/packets/: AcknowledgementPacket.cpp  AcknowledgementPacket.hpp  BlockNumber.cpp  BlockNumber.hpp  CMakeLists.txt  DataPacket.cpp  DataPacket.hpp  ErrorCodeDescription.cpp  ErrorCodeDescription.hpp  ErrorPacket.cpp  ErrorPacket.hpp  Options.cpp  Options.hpp  Options.ipp  OptionsAcknowledgementPacket.cpp  OptionsAcknowledgementPacket.hpp  Packet.cpp  Packet.hpp  PacketException.hpp  PacketHandler.cpp  PacketHandler.hpp  Packets.hpp  (+12 more)
lib/tftp_qt/: CMakeLists.txt  PacketStatisticModel.cpp  PacketStatisticModel.hpp  TftpQt.hpp
libtftp/: CMakeLists.txt
libtftp/tftp/: ErrorCodeDescription.cpp  ErrorCodeDescription.hpp  OperationHandler.hpp  PacketHandler.cpp  PacketHandler.hpp  ReceiveDataOperationHandler.hpp  RequestTypeDescription.cpp  RequestTypeDescription.hpp  Tftp.hpp  TftpConfiguration.cpp  TftpConfiguration.hpp  TftpException.hpp  TftpOperationHandler.hpp  TftpPacketHandler.cpp  TftpPacketHandler.hpp  TftpReceiveDataOperationHandler.hpp  TftpTransmitDataOperationHandler.hpp  TransmitDataOperationHandler.hpp
tftp/: CMakeLists.txt  DataHandler.hpp  ErrorCodeDescription.cpp  ErrorCodeDescription.hpp  PacketHandler.cpp  PacketHandler.hpp  ReceiveDataHandler.hpp  RequestTypeDescription.cpp  RequestTypeDescription.hpp  Tftp.hpp  TftpConfiguration.cpp  TftpConfiguration.hpp  TftpException.hpp  TftpLogger.hpp  TftpOptionsConfiguration.cpp  TftpOptionsConfiguration.hpp  TftpOptionsConfigurationTest.cpp  TransferStatusDescription.cpp  TransferStatusDescription.hpp  TransmitDataHandler.hpp  Version.cpp.in  Version.hpp  VersionTest.cpp
tftp/client/: CMakeLists.txt  Client.hpp  Operation.hpp  ReadOperationConfiguration.cpp  ReadOperationConfiguration.hpp  TftpClient.cpp  TftpClient.hpp  WriteOperationConfiguration.cpp  WriteOperationConfiguration.hpp
tftp/file/: CMakeLists.txt  File.hpp  MemoryFile.cpp  MemoryFile.hpp  NullSinkFile.cpp  NullSinkFile.hpp  StreamFile.cpp  StreamFile.hpp  StreamFile.ipp  TftpFile.hpp
tftp/options/: CMakeLists.txt  IntegerOption.hpp  IntegerOptionTest.cpp  Option.cpp  Option.hpp  OptionList.cpp  OptionList.hpp  OptionListTest.cpp  OptionNegotiation.hpp  OptionNegotiation.ipp  OptionNegotiationTest.cpp  OptionTest.cpp  Options.hpp  StringOption.cpp  StringOption.hpp  StringOptionTest.cpp
tftp/packets/: AcknowledgementPacket.cpp  AcknowledgementPacket.hpp  AcknowledgementPacketTest.cpp  BaseErrorPacket.cpp  BaseErrorPacket.hpp  BaseErrorPacketTest.cpp  BlockNumber.cpp  BlockNumber.hpp  BlockNumberTest.cpp  CMakeLists.txt  DataPacket.cpp  DataPacket.hpp  DataPacketTest.cpp  ErrorCodeDescription.cpp  ErrorPacket.cpp  ErrorPacket.hpp  ErrorPacketTest.cpp  Options.hpp  Options.ipp  OptionsAcknowledgementPacket.cpp  OptionsAcknowledgementPacket.hpp  OptionsAcknowledgementPacketTest.cpp  OptionsTest.cpp  Packet.cpp  Packet.hpp  PacketException.hpp  PacketFactory.cpp  PacketFactory.hpp  PacketHandler.cpp  PacketHandler.hpp  PacketTypeDescription.cpp  PacketTypeDescription.hpp  Packets.cpp  Packets.hpp  Packets.ipp  PacketsTest.cpp  ReadRequestPacket.cpp  ReadRequestPacket.hpp  ReadRequestPacketTest.cpp  ReadWriteRequestPacket.cpp  (+9 more)
tftp/server/: CMakeLists.txt  Operation.hpp  ReadOperationConfiguration.cpp  ReadOperationConfiguration.hpp  Server.hpp  ServerConfiguration.cpp  ServerConfiguration.hpp  TftpServer.cpp  TftpServer.hpp  WriteOperationConfiguration.cpp  WriteOperationConfiguration.hpp
tftp_api_doc/: CMakeLists.txt  Mainpage.md
(+233 files in other folders)
